# Mentors_test

./: .gitignore  Makefile  README.md  pyproject.toml  student_task.py
src/: task.py
tests/: conftest.py  test_custom_dict.py
